--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
                         
                         <div class="custom-btn-group mt-4">
-                          <a href="/files/Resume_MeriemSMATI.pdf" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download Resume</a>
+                          <a href="/files/MERIEM_SMATI_Resume.pdf" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download Resume</a>
                           <a href="#contact" class="btn custom-btn custom-btn-bg custom-btn-link">Get in Touch !</a>
                         </div>
                         
@@ -575,18 +575,55 @@
                 </div>
 
                 <div class="owl-carousel owl-theme">
-                  <div class="item">
-                    <div class="project-info">
-                      <img src="images/certificates/Coursera_Iot_ES.png" class="img-fluid" alt="project image">
+                  <a href="https://www.coursera.org/account/accomplishments/verify/BSW7JG9N898V">
+                    <div class="item">
+                      <div class="project-info">
+                        <img src="images/certificates/Coursera_Iot_ES.png" class="img-fluid" alt="project image">
+                      </div>
                     </div>
-                  </div>
-
-                  <div class="item">
-                    <div class="project-info">
-                      <img src="images/certificates/DigitalMarketing.png" class="img-fluid" alt="project image">
+                  </a>
+                  <a>
+                    <div class="item">
+                      <div class="project-info">
+                        <img src="images/certificates/COC22_MERIEMSMATI.png" class="img-fluid" alt="project image">
+                      </div>
                     </div>
-                  </div>
-
+                  </a>
+                  <a href="">
+                    <div class="item">
+                      <div class="project-info">
+                        <img src="images/certificates/IntroToMachineLearning_MERIEMSMATI.png" class="img-fluid" alt="project image">
+                      </div>
+                    </div>
+                  </a>
+                  <a href="">
+                    <div class="item">
+                      <div class="project-info">
+                        <img src="images/certificates/Pandas_MERIEMSMATI.png" class="img-fluid" alt="project image">
+                      </div>
+                    </div>
+                  </a>
+                  <a href="https://www.freecodecamp.org/certification/meriemsmt/scientific-computing-with-python-v7">
+                    <div class="item">
+                      <div class="project-info">
+                        <img src="images/certificates/ScientificCompyting_SMATIMERIEM.jpg" class="img-fluid" alt="project image">
+                      </div>
+                    </div>
+                  </a>
+                  <a href="">
+                    <div class="item">
+                      <div class="project-info">
+                        <img src="images/certificates/DigitalMarketing.png" class="img-fluid" alt="project image">
+                      </div>
+                    </div>
+                  </a>
+                  <a href="">
+                    <div class="item">
+                      <div class="project-info">
+                        <img src="images/certificates/AIBOT.jpeg" class="img-fluid" alt="project image">
+                      </div>
+                    </div>
+                  </a>
                   <div class="item">
                     <div class="project-info">
                       <img src="images/certificates/Entrepreneurship.png" class="img-fluid" alt="project image">
