--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="author" content="Meriem Smati">
-  <meta name="description" content="CNRS Software Engineering Researcher @ LaBRI">
+  <meta name="description" content="PhD Student @ INSA Lyon and Polytechnique Montréal">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/academicons.min.css">
@@ -63,7 +63,7 @@
             </div>
             <ul aria-hidden="true" class="social-icon">
               <li>
-                <a href="https://scholar.google.com"><i class="ai ai-google-scholar big-icon"></i></a>
+                <a href="https://scholar.google.com/citations?hl=fr&view_op=list_works&gmla=AH8HC4yUt9Yga3R1dazUrMyvL-7tPKd3fqo0dea8ZpYgu7HkiziB3GtxOKB7M9S9AE2zBszENPrFoQr1l39cm6a9Q3Q&user=G_68-lwAAAAJ"><i class="ai ai-google-scholar big-icon"></i></a>
               </li>
               <li>
                 <a href="https://github.com/meriemsmt"><i class="fa fa-github big-icon"></i></a>
